fix weather apis
